refactor: simplify swing tool file helpers
Replace manual read and package-stripping loops with direct line and enhanced-for loops, and delegate file URL construction to File.toURI().toURL(). Add coverage for absolute file paths while preserving the legacy Vector-facing API.